--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,7 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: greetings.hello
     events:
       - http:
           path: hello
